--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@uploadthing/react": "^7.3.2",
     "class-variance-authority": "^0.7.1",
