--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "drizzle-orm": "^0.41.0",
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "next": "^15.2.3",
     "postgres": "^3.4.4",
