--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "next": "^15.2.3",
+    "next-intl": "^4.3.4",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
