--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-scroll-parallax": "^3.4.5",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.3",
     "zod": "^3.24.2"
