--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scroll-parallax": "^3.4.5",
+    "svix": "^1.77.0",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.3",
     "zod": "^3.24.2"
