--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lucide-react": "^0.525.0",
     "next": "^15.2.3",
     "next-intl": "^4.3.4",
+    "ngrok": "5.0.0-beta.2",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
